// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injecting with \`propKey\` should match snapshot 1`] = `
<TestComponent
  availableFeatureToggles={
    Object {
      "aFeatureToggle": true,
    }
  }
  fooFlagPropName={true}
/>
`;

exports[`injecting without \`propKey\` should match snapshot 1`] = `
<TestComponent
  availableFeatureToggles={
    Object {
      "aFeatureToggle": true,
    }
  }
  isFeatureEnabled={true}
/>
`;
